adding about me

--- a/index.html
+++ b/index.html
@@ -271,9 +271,22 @@
 								<h1 class="big">About</h1>
 								<h2 class="mb-4">About Me</h2>
 								
-								<p>With over 5 years of comprehensive experience in the field of data science & analytics, accompanied by a bachelor's degree in engineering. 
-									Proficient in data analysis, statistical analysis, hypothesis testing, customer behaviour analysis, &amp; machine learning. 
-									Demonstrated success in leading impactful projects and providing effective mentorship.</p>
+								<p>
+									I’m a <strong>Senior Data Engineer</strong> with <strong>15 years of experience</strong> in architecting and implementing 
+									<strong>large-scale data solutions</strong>. Passionate about designing robust data architectures, I specialize in leveraging platforms like 
+									<strong>Azure Synapse, Databricks, and Microsoft Fabric</strong> to build efficient and scalable data ecosystems.
+								</p>
+								<p>
+									Beyond traditional data engineering, I have a keen interest in <strong>machine learning integration</strong>, particularly in 
+									<strong>LLM-powered applications</strong> using <strong>RAG and LlamaIndex</strong> to enhance user engagement and drive business insights. 
+									I thrive in <strong>leading cross-functional teams</strong>, driving innovation, and setting new industry standards through 
+									continuous improvement and user-driven development.
+								</p>
+								<p>
+									With a strong problem-solving mindset and a collaborative approach, I’m always excited to explore new technologies and push 
+									the boundaries of what’s possible with data. 🚀
+								</p>
+								
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Profile:</span> <span>Data Science &amp; Analytics</span></li>
 									<li class="d-flex"><span>Domain:</span> <span>Retail, Ecommerce, BFSI &amp; Digital Marketing</span></li>
