adding new changes

--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
 	      	<div class="overlay"></div>
 	         <div class="container">
 	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/bg_1.png);">
-	          	 <div class="overlay"></div>
+				<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/bg_1.png);">
+				 <div class="overlay"></div>
 	          	</div>
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text">
@@ -187,7 +187,7 @@
 
 						<br>
 						<br>
-			            <h2>A Senior Data Analyst</h2>
+			            <h2>A Senior Software Engineer</h2>
 						<h6>Microsoft corporation</h6>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
@@ -214,7 +214,7 @@
 								<div class="row">
 									<div class="col-sm-6 col-md-5">
 									  <div class="about-img">
-										<img src="images/about-me.png" class="img-fluid rounded b-shadow-a" alt="">
+										<img src="images/prakash-about-me.jpg" class="img-fluid rounded b-shadow-a" alt="">
 									  </div>
 									</div>
 									<!-- Details next to profile image -->
@@ -286,7 +286,7 @@
 									With a strong problem-solving mindset and a collaborative approach, I’m always excited to explore new technologies and push 
 									the boundaries of what’s possible with data. 🚀
 								</p>
-								
+
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Profile:</span> <span>Data Science &amp; Analytics</span></li>
 									<li class="d-flex"><span>Domain:</span> <span>Retail, Ecommerce, BFSI &amp; Digital Marketing</span></li>
@@ -307,7 +307,7 @@
 									<span class="number" data-number="30">0</span> <span>+</span>
 									<span>&nbsp; Projects completed</span>
 								</p>
-								<p><a href="https://www.linkedin.com/in/rishabhnmishra/" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
+								<p><a href="https://www.linkedin.com/in/praxkv/" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
 							</div>
 						</div>
 					</div>
@@ -320,7 +320,7 @@
 
 	
     <section class="ftco-section ftco-no-pb" id="resume-section">
-    	<div class="container">
+    	<div class="container-fluid px-5">
     		<div class="row justify-content-center pb-5">
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
@@ -335,34 +335,58 @@
 		</div>
 		<br>
 		
-		<div class="row">
-				<div class="col-md-6">
+		<div class="row justify-content-center">
+				<div class="col-md-4 px-4">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">2021-Present</span>
-						<h2>Senior Data Analyst</h2>
-						<span class="position">Merkle</span>
-						<p class="mt-4">Merkle, a leading CXM and media company with over 10K+ professionals globally. It's a part of Dentsu International. 
+						<span class="date">2018-Present</span>
+						<h2>Senior Software Engineer</h2>
+						<span class="position">Microsoft</span>
+						<p class="mt-4">Experienced <strong>Senior Data Engineer</strong> specializing in <strong>scalable data solutions, LLM-powered applications, and AI-driven platform enhancements</strong>. 
+										Proven track record in <strong>optimizing data pipelines, leading cross-functional teams, and driving innovation</strong>.
+							<h3>Key Highlights</h3>
 							<ul>
-								<li>Analysed ad campaigns, clickstream, and customer surveys data, identified an increasing demand and launched a strategic product line.</li>
-								<li>Developed time series forecasting models to predict sales and optimize marketing budgets, got model performance of 92%.</li>
-								<li>Designed and executed A/B tests, performed rigorous statistical analysis. Led to 20% MoM increase in the conversion rate.</li>
+								<li><strong>Big Data Solutions:</strong> Designed and optimized <strong>Azure Synapse, Databricks, and PySpark</strong> pipelines, boosting processing speed by <strong>30%</strong>.</li>
+								<li><strong>LLM-Powered Chat App:</strong> Led the development of a <strong>real estate-focused chat application</strong> using <strong>LlamaIndex and RAG</strong>.</li>
+								<li><strong>Copilot Capability:</strong> Integrated <strong>LLM-based copilot features</strong>, enhancing data query functionality and user experience.</li>
+								<li><strong>Platform Expansion:</strong> Extended platform capabilities to <strong>attendance tracking (BELT) and historical data requests</strong>.</li>
+								<li><strong>Cross-Functional Leadership:</strong> Collaborated with <strong>product, engineering, and data science</strong> teams to drive innovation and seamless execution.</li>
 							</ul>
 						</p>
 					</div>
 
 				</div>
 
-				<div class="col-md-6">
+				<div class="col-md-4">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">2018-2021</span>
-						<h2>Senior Data Analyst</h2>
-						<span class="position">iQuanti</span>
-						<p class="mt-4">iQuanti is a data-driven digital marketing analytics and solutions company, helps top 100 global brands. 
+						<span class="date">2011-2018</span>
+						<h2>Technical Lead</h2>
+						<span class="position">Mindtree Ltd</span>
+						<p class="mt-4">Experienced in data engineering, I’ve designed and developed efficient data models and automated ETL pipelines using COSMOS, Azure Data Lake, and Azure Data Factory. 
+							I’ve also implemented CI/CD automation, real-time dashboards, and built tools for optimized traffic management and system performance.
+							<h3>Key Highlights</h3>
 							<ul>
-								<li>Performed in-depth market research and analysis to create online pages. Resulted in ~100% website growth and 30% increase in conversion rate YoY.</li>
-								<li>Delivered multiple training and mentorship sessions on analytical tools like SQL, MS Excel, Power BI, Tableau and Python.</li>
-								<li>Performed migration and enhancements for merchandising dashboard, involved data integration and its feature improvement.</li>
+							<li>Designed and developed data models and ETL pipelines using COSMOS, Azure Data Lake, and Azure Data Factory.</li>
+							<li>Implemented CI/CD pipelines, reducing manual deployment errors and improving release efficiency.</li>
+							<li>Developed real-time patch compliance dashboards with .NET and PowerShell for system performance monitoring.</li>
+							<li>Created a GTM-based traffic redirector web API for load distribution across Azure servers, ensuring high availability.</li>
 							</ul>
+						</p>
+					</div>
+
+				</div>
+				<div class="col-md-4">
+					<div class="resume-wrap ftco-animate">
+						<span class="date">2008-2011</span>
+						<h2>Software Engineer</h2>
+						<span class="position">TCS</span>
+						<p class="mt-4">Skilled in developing identity management solutions, application development, and fostering cross-team collaboration to drive efficient project delivery. I have experience in automating IT resource provisioning, designing core business logic, and supporting multinational deployments with multilingual capabilities
+							<h3>Key Highlights</h3>
+								<ul>
+								<li>Developed identity management solutions to automate IT resource provisioning and access control.</li>
+								<li>Designed and implemented core business logic and data access layers, supporting multinational deployment.</li>
+								<li>Partnered with global teams to deliver projects on time, incorporating multilingual capabilities.</li>
+								<li>Enhanced collaboration and streamlined project delivery by integrating diverse technology stacks and frameworks.</li>
+								</ul>
 						</p>
 					</div>
 
@@ -406,7 +430,7 @@
     	</div>
     </section>
 
-   
+
 
     <section class="ftco-section" id="project-section">
       <div class="container">
